Database and Data model added

--- a/TestWebAPI/TestWebAPI/appsettings.json
+++ b/TestWebAPI/TestWebAPI/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "i.": null,
+    "WebAPIDB": "Server=(localdb)\\MSSQLLocalDB;Database=Web-API;Trusted_Connection=True;"
+  }
 }
